essaye d'ajout d'objectif sur le plateau ça marche pas